# Playa

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
src/: App.vue  helpers.js  main.js  store.js  styles.css  tvdb.js  youtube.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: add_external_item_episodes.sql  add_finale_columns_to_episodes.sql  add_yt_playlist_option_to_items.sql  create_initial_tables.sql  emitter.rs  images.rs  main.rs  playback_positions.rs  scanner.rs
src/classes/: Episode.js  ExternalItem.js  ExternalItemEpisode.js  Item.js  Level.js  Movie.js  Show.js
src/components/: ArtworkEdit.vue  Badge.vue  Button.vue  CheckboxWithLabel.vue  DirSelect.vue  EpisodeCard.vue  ExternalItemCard.vue  ExternalItemEpisodeCard.vue  InputWithLabel.vue  ItemCard.vue  ItemRouterLink.vue  MovieCard.vue  MovietypeCard.vue  NavLink.vue  PlaybackPosnLevel.vue  SearchModal.vue  ShowCard.vue  ShowtypeCard.vue  Textarea.vue  TextareaWithLabel.vue  TvdbMatches.vue
src/icons/: AddIcon.vue  ArchiveIcon.vue  BottomIcon.vue  BrowseFoldersIcon.vue  CloseIcon.vue  CollapseIcon.vue  EditIcon.vue  EpisodesIcon.vue  ExpandIcon.vue  ExternalLinkIcon.vue  FileAddIcon.vue  FileDownIcon.vue  FileIcon.vue  FilterIcon.vue  FolderIcon.vue  GlobeIcon.vue  HideIcon.vue  HistoryIcon.vue  HomeIcon.vue  ImageReplaceIcon.vue  KeyboardIcon.vue  MovieIcon.vue  PlayedIcon.vue  RandIcon.vue  RefreshIcon.vue  ScanIcon.vue  SearchIcon.vue  SetttingsIcon.vue  ShowIcon.vue  TopIcon.vue  TrashIcon.vue  TvIcon.vue  UnarchiveIcon.vue  UnplayedIcon.vue  YoutubeIcon.vue
src/views/: ArchivesView.vue  ClearPlaybackView.vue  ExternalItemPageView.vue  HomeView.vue  ItemPageView.vue  MoviePageView.vue  SettingsView.vue  Show.vue  ShowPage.vue  ShowPageView.vue
