[package]
name = "playa"
version = "0.3.4"
description = "Playa"
authors = ["C. Liam Brown"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
trash = "3"
infer = "0.3"
reqwest = { version = "0.12", features = ["blocking"] }
image = "0.25.1"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
showfile = "0.1.1"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
regex = "1.11.1"
tauri-plugin-opener = "2"

[dependencies.tauri-plugin-sql]
features = ["sqlite"]
version = "2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
